// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update migrate TuiIsoToCountryCodePipe adds TODO comment for TuiIsoToCountryCodePipe (no automatic rename): test.ts 1`] = `
{
  "0. Before": "
                import {TuiIsoToCountryCodePipe} from '@taiga-ui/legacy';

                @Component({
                    standalone: true,
                    imports: [TuiIsoToCountryCodePipe],
                    template: '{{ isoCode | tuiIsoToCountryCode }}'
                })
                export class TestComponent {}
            ",
  "1. After": "import { getCountryCallingCode } from "libphonenumber-js/core";

// TODO: (Taiga UI migration) TuiIsoToCountryCodePipe has been removed. Replace pipe usage \`isoCode | tuiIsoToCountryCode\` with the getCountryCallingCode(isoCode, metadata) function from libphonenumber-js/core.

                @Component({
                    standalone: true,
                    imports: [getCountryCallingCode],
                    template: '{{ isoCode | tuiIsoToCountryCode }}'
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update migrate TuiIsoToCountryCodePipe adds TODO comment when TuiIsoToCountryCodePipe used in NgModule: test.ts 1`] = `
{
  "0. Before": "
                import {TuiIsoToCountryCodePipe} from '@taiga-ui/legacy';

                @NgModule({
                    imports: [TuiIsoToCountryCodePipe],
                })
                export class AppModule {}
            ",
  "1. After": "import { getCountryCallingCode } from "libphonenumber-js/core";

// TODO: (Taiga UI migration) TuiIsoToCountryCodePipe has been removed. Replace pipe usage \`isoCode | tuiIsoToCountryCode\` with the getCountryCallingCode(isoCode, metadata) function from libphonenumber-js/core.

                @NgModule({
                    imports: [getCountryCallingCode],
                })
                export class AppModule {}
            ",
}
`;
